deleted skills flexslider, fixed slider css for materialize slider, vertically aligned active li

--- a/css/index.css
+++ b/css/index.css
@@ -136,13 +136,27 @@ h3.title small {
   font-size: 0.95rem;
 }
 
-section#skills div.skillSlider, section#skills div.slider {
-  margin-top: 3rem;
+ section#skills div.slider {
+  /*margin-top: 3rem;*/
   padding: 1rem 0;
   background-color: #3DC9B3;
 }
 
-section#skills div.skillSlider h3, section#skills div.slider h3{
+h3#mySkillTitle {
+  color: white;
+  /*font-weight: bold;*/
+  text-align: center;
+  letter-spacing: 5px;
+  background-color: #3DC9B3;
+  margin-bottom: 0;
+}
+
+div.slider {
+  margin: 0;
+  padding: 0;
+}
+
+section#skills div.slider h3{
   color: white;
   /*font-weight: bold;*/
   text-align: center;
